--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -518,11 +518,15 @@ female_heights <- female_population_heights %>%
 
 Next, we obtain a large number of samples from each population and place them in many_samples.
 
-```{r}
+```{r, eval = FALSE}
 many_samples<-  get_d_samples_from_population_data(pop1 = male_heights,
                                    pop2 = female_heights,
                                    cell.n = 10,
                                    number.of.samples = 50000)
+```
+
+```{r, echo=FALSE}
+many_samples <- readRDS("ch_samples/many_samples_d_n10.RDS")
 ```
 
 We can examine the contents of many_samples using the head() command. Each row of many_samples illustrates two samples: 10 males and 10 females. For both males and females we calculate the mean and variance. As well, we calculate the $d$ and $d_{unbiased}$ for each row. If you examine the first row carefully you see that the data in this row corresponds to the hand calculation example.
