--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -342,3 +342,81 @@ Additionally, a larger sample size makes the sample estimate (i.e., $s^2$) of th
 
 Something about this working for d-values also...
 
+
+```{r, echo = FALSE, eval = FALSE}
+
+pop_data$sex <- as.factor(pop_data$sex)
+
+textMean1 <- expression(Delta~"M" == 15)
+textd1 <- expression(delta == 1.49)
+textfemale1 <- expression("Female"~mu == 165)
+textmale1 <- expression("Male"~mu == 180)
+texts1 <- expression(sigma == 10.1)
+
+many_samples_d_10 <- readRDS("ch_samples_precision/many_samples_d_n10.RDS")
+many_samples_d_100 <- readRDS("ch_samples_precision/many_samples_d_n100.RDS")
+
+ggd10 <- ggplot(data = many_samples_d_10,
+                mapping = aes(x = d.unbiased)) +
+  geom_density() +
+  coord_cartesian(xlim = c(-.25, 3.5), ylim = c(0, 1.2)) +
+  theme_classic() +
+  scale_x_continuous(breaks = seq(0, 3.5, by = .25)) +
+  labs(y = "Frequency", x = "sample d.unbiased", title = "Sampling distribution d.unbiased (n = 10)") +
+  geom_segment(x = 1.49, xend = 1.49, y = 0, yend = 1, size = 2, color = "green") +
+  annotate("text", x = 1.49, y = 1.1, parse = T, label = as.character(textd1)) 
+
+
+
+
+ggd100 <- ggplot(data = many_samples_d_100,
+                mapping = aes(x = d.unbiased)) +
+  geom_density() +
+  coord_cartesian(xlim = c(-.25, 3.5), ylim = c(0, 3.3)) +
+  theme_classic() +
+  scale_x_continuous(breaks = seq(0, 3.5, by = .25)) +
+  labs(y = "Frequency", x = "sample d.unbiased", title = "Sampling distribution d.unbiased (n = 100)") +
+  geom_segment(x = 1.49, xend = 1.49, y = 0, yend = 3, size = 2, color = "green") +
+  annotate("text", x = 1.49, y = 3.2, parse = T, label = as.character(textd1)) 
+
+
+
+
+ggall <- ggplot(data = pop_data, 
+                mapping = aes(x = height, group = sex, linetype = sex)) +
+  geom_density() +
+  theme_classic() +
+  scale_alpha_manual(values = c(.20, .50)) +
+  scale_x_continuous(breaks = seq(100, 250, by = 10)) +
+  geom_segment(x = 165, xend = 165, y = 0, yend = .7000, size = 1, linetype = "dotted") +
+  geom_segment(x = 180, xend = 180, y = 0, yend = .7000, size = 1) +
+  geom_segment(x = 170, xend = 180, y = .05500, yend = .05500, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  geom_segment(x = 175, xend = 165, y = .05500, yend = .05500, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  annotate("text", x = 172, y = .0520, 
+           parse = T, label = as.character(textMean1)) +
+  annotate("text", x = 172, y = .05800, 
+           parse = T, label = as.character(textd1)) +
+  annotate("text", x = 185, y = .04400, 
+           parse = T, label = as.character(textmale1), hjust = 0) +
+  annotate("text", x = 185, y = .04000, 
+           parse = T, label = as.character(texts1), hjust = 0) + 
+  annotate("text", x = 160, y = .04400, 
+           parse = T, label = as.character(textfemale1), hjust = 1) +
+  annotate("text", x = 160, y = .04000, 
+           parse = T, label = as.character(texts1), hjust = 1) + 
+  coord_cartesian(ylim = c(0, .060), xlim = c(120, 220)) +
+  labs(x = "Height (cm)", y = "", title = "Populations", linetype = "Sex")
+
+# png(filename = "ch_samples_precision/images/d_distribs.png", res = 300, width =8*300, height = 9*300)
+# gridExtra::grid.arrange(ggall, ggd10, ggd100, nrow = 3)
+# dev.off()
+
+pdf(file = "ch_samples_precision/images/d_distribs.pdf", width =8, height = 9)
+gridExtra::grid.arrange(ggall, ggd10, ggd100, nrow = 3)
+dev.off()
+
+```
+
+```{r ddistributions, echo=FALSE, out.width = "80%", fig.cap = "d.unbiased sampling distributions"}
+knitr::include_graphics("ch_samples_precision/images/d_distribs.png")
+```
